force-app/main/default/objects/APIEndpoint__c/APIEndpoint__c.object-meta.xml
<CustomObject>
    <label>API Endpoint</label>
    <nameField>
        <displayFormat>Endpoint-{000000000}</displayFormat>
        <label>Endpoint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Endpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>