force-app/main/default/objects/APIEndpoint__c/fields/APISetting__c.field-meta.xml
<CustomField>
    <fullName>APISetting__c</fullName>
    <label>API Setting</label>
    <referenceTo>APISetting__c</referenceTo>
    <relationshipLabel>API Endpoints</relationshipLabel>
    <relationshipName>APIEndpoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>