force-app/main/default/objects/APIEndpoint__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <formula>APISetting__r.Base_URL__c &amp; Extension__c</formula>
    <label>Endpoint</label>
    <type>Text</type>
</CustomField>