force-app/main/default/objects/APIEndpoint__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>